test/typecheck/fail/unknown_end.sail

end does_not_exist
